assets/css/main.scss
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

$theme-colors: (
    "blue1": #0487c0,
    "blue2": #046b93,
    "light-grey": #e4ebf3,
    "blue3": #2ca2d8,
    "blue4": #044c67
);

html,
body {
    height: 100%;
}

.home {
    background-color: map-get($theme-colors, 'light-grey');

    @media screen and (max-width: 768px) {
        & {
            padding-left: 10px;
            padding-right: 10px;
        }
    }
    
    padding-left: 80px;
    padding-right: 80px;
    padding-bottom: 75px;

    &__hero-section {
        height: 100vh;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

        &__heading {
            font-size: 50px;
            text-align: center;
        }
    }

    &__section {
        padding: 20px;

        &__heading {
            text-align: center;
            font-weight: bold;
            font-size: 40px;
        }

        &__content {
            margin-top: 20px;
        }

        .about__content {
            display: flex;

            @media screen and (max-width: 768px) {
                & {
                    flex-direction: column;
                }
            }

            p {
                width: 50%;
                padding: 20px;

                @media screen and (max-width: 768px) {
                    & {
                        width: 100%;
                        order: 2;
                    }
                }
            }

            figure {
                @media screen and (max-width: 768px) {
                    & {
                        width: 100%;
                        order: 1;
                    }
                }

                width: 50%;
                display: flex;
                justify-content: center;
                align-items: center;

                img {
                    box-shadow: 5px 10px 18px #888;
                }
            }
        }

        .contact__content {
            display: flex;
            flex-direction: column;
            text-align: center;
        }
    }

    &__learn-more {
        cursor: pointer;
        font-weight: bolder;
    }
}

.divider {
    height: 12px;
    width: 180px;
    background: rgb(2,0,36);
    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(6,68,160,1) 12%, rgba(0,212,255,1) 100%);
    border-radius: 10px;
    margin: 0 auto;
    margin-top: 10px;
}

#website-navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #6cf;
    height: 50px;
    width: 100%;

    ul {
        li {
            a {
                color: black;
            }
        }
    }
}

#website-footer {
    width: 100%;
    height: 60px;
    color: white;
    background: map-get($theme-colors, 'blue3');
    display: flex;
    justify-content: center;
    align-items: center;
}

